tests/fixtures/invalid/w003/unused_invariant.spec
invariant unused_rule "Unused" {
  guarantee """must hold"""
}
